# creel

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: creel-ai  creel-architecture  creel-bindings  creel-eval  creel-evaluation  creel-extract  creel-extractors  creel-grammar  creel-ingestion  creel-projections
.claude/skills/creel-architecture/: SKILL.md
.claude/skills/creel-eval/: SKILL.md
.claude/skills/creel-extractors/: SKILL.md
.claude/skills/creel-ingestion/: SKILL.md
_modules/: index.html
_modules/creel/: annotate.html  bindings.html  evaluation.html  evidence.html  export.html  facade.html  ingest.html  join.html  policy.html  reify.html  render.html  resolve.html  sources.html  temporal.html  trace.html  view.html
_modules/creel/extract/: cache.html  llm.html  pattern.html  protocol.html  query.html  registry.html  transforms.html
_modules/creel/graph/: canonical.html  model.html
_modules/creel/ingest/: loaders.html  protocol.html
_modules/creel/spec/: linkml.html  model.html  validate.html
_modules/creel/verify/: graph_match.html  kinds.html  protocol.html  registry.html  rubric.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: creel.rst.txt
_sources/module_docs/creel/: annotate.rst.txt  bindings.rst.txt  evaluation.rst.txt  evidence.rst.txt  export.rst.txt  extract.rst.txt  facade.rst.txt  graph.rst.txt  ingest.rst.txt  join.rst.txt  policy.rst.txt  reify.rst.txt  render.rst.txt  resolve.rst.txt  (+6 more)
creel/: __init__.py  annotate.py  bindings.py  evaluation.py  evidence.py  facade.py  join.py  policy.py  reify.py  render.py  resolve.py  sources.py  temporal.py  trace.py  view.py
creel/export/: __init__.py
creel/extract/: __init__.py  cache.py  llm.py  pattern.py  protocol.py  query.py  registry.py  transforms.py
creel/graph/: __init__.py  canonical.py  model.py
creel/ingest/: __init__.py  loaders.py  protocol.py
creel/schemas/: graph-v1.schema.json
creel/spec/: __init__.py  linkml.py  model.py  validate.py
creel/verify/: __init__.py  graph_match.py  kinds.py  protocol.py  registry.py  rubric.py
examples/: quickstart.py
misc/docs/: starter -- source-to-graph-engine_core-description.md
module_docs/: creel.html
module_docs/creel/: annotate.html  bindings.html  evaluation.html  evidence.html  export.html  extract.html  facade.html  graph.html  ingest.html  join.html  policy.html  reify.html  render.html  resolve.html  sources.html  spec.html  temporal.html  trace.html  verify.html  view.html
skills/creel-architecture/: SKILL.md
skills/creel-eval/: SKILL.md
skills/creel-extractors/: SKILL.md
skills/creel-ingestion/: SKILL.md
tests/: conftest.py  test_annotate_render.py  test_canonical.py  test_cluster_pass.py  test_evidence.py  test_export.py  test_extract_llm.py  test_extract_pattern.py  test_extract_query.py  test_facade.py  test_ingest.py  test_linkml.py  test_llm_live.py  test_policy.py  test_rbm_corpus.py  test_reify.py  test_resolve.py  test_review_repairs.py  test_spec_model.py  test_trace.py  test_unhcr_corpus.py  test_validate.py  test_verify_kinds.py  test_verify_rubric.py  test_view.py
(+75 files in other folders)
