[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "creel"
version = "0.0.3"
description = "Extract linked information from a mess or sources"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "pydantic>=2",
    "jsonschema>=4",
    "networkx>=3",
]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/creel"
Repository = "https://github.com/thorwhalen/creel"
Documentation = "https://thorwhalen.github.io/creel"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]
# --- functional extras (each behind a Protocol/strategy seam; lazily imported) ---
llm = [
    "instructor>=1",
]
query = [
    "duckdb>=0.10",
    "jmespath>=1",
]
semantic = [
    "linkml>=1.7",
    "rdflib>=7",
    "pyshacl>=0.25",
]
graphdb = [
    "neo4j>=5",
    "pyoxigraph>=0.3",
    "rustworkx>=0.14",
]
eval = [
    "deepeval>=0.21",
]
er = [
    "splink>=4",
]
# Ingestion default: local, structure-preserving, PERMISSIVELY-licensed (R13).
# Deliberately excludes AGPL/GPL parsers (PyMuPDF4LLM, Marker) — those, plus
# hosted/VLM backends, are opt-in escalation extras.
ingest = [
    "docling>=2",
    "trafilatura>=1.6",
    "openpyxl>=3.1",
    "python-docx>=1.1",
]
ocr = [
    "pytesseract>=0.3",
]
anthropic = [
    "anthropic>=0.40",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
